DIG-8423 - fix font-size on smaller devices

--- a/src/core/atoms/january-sale-banner/january-sale-banner.scss
+++ b/src/core/atoms/january-sale-banner/january-sale-banner.scss
@@ -191,6 +191,12 @@
       height: calc(100% - 5px);
     }
 
+    &__sale-text {
+      @media (max-width: 330px) {
+        font-size: $font-size-400;
+      }
+    }
+
     &__inner {
       justify-content: space-evenly;
 
